# corrosim

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  dft_descriptors.json  dft_descriptors_opt.csv  dft_descriptors_opt.json  docker-compose.yml  geometry_comparison.csv  isorhamnetin_fukui.json  mc_adsorption.json  pyproject.toml  report.html
.github/workflows/: ci.yml  codeql.yml
corrosim/: __init__.py  __main__.py  adsorption.py  cli.py  descriptors.py  engines.py  equations.py  figures.py  fukui.py  mc.py  md.py  medium.py  molecules.py  pka.py  presets.py  report.py  report_content.py  report_docx.py  report_layout.py  speciation.py  surface.py
corrosim/runs/: __init__.py  compare_geometry.py  make_cubes.py  make_figures.py  make_report.py  run_dft.py  run_fukui.py  run_mc.py  run_md.py  run_pka.py
docs/: ONBOARDING.md  PLAYBOOK.md  dev-journal.md  pipeline.drawio  pipeline.md  validation.md
docs/adr/: 0002-adopt-pyrazolo-pyrimidine-methodology-template.md  0004-quantitative-ph-speciation.md
docs/decisions/: 0001-reject-cluster-xtb-adsorption-energy.md  0003-medium-to-protonation-selection.md  0005-computed-pka-resolves-protonation.md  0006-report-bundle-output-layout.md  0007-scoped-quality-gates.md  0008-report-bundle-subfolders-word-equations.md
examples/: molecules.csv
notebooks/: corrosion_inhibitor_tool.ipynb
report/: report.docx  report.html
report/tables/: dft_descriptors.csv  dft_descriptors_opt.csv  pka.json
report/tables/dft/: geometry_comparison.csv  ranking.csv
results/: dft_descriptors_opt.json  kaempferol_fukui.json  md_rdf.json  pka.json  quercetin_fukui.json
tests/: test_adsorption.py  test_descriptors.py  test_docstrings.py  test_equations.py  test_esp.py  test_geometry.py  test_md.py  test_medium.py  test_molecules.py  test_parsers.py  test_pipeline_drivers.py  test_pka.py  test_presets.py  test_protonation.py  test_report.py  test_report_docx.py  test_report_layout.py  test_speciation.py  test_surface_refactor.py
tools/: build_notebook.py  render_notebook.py
