[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corrosim"
version = "0.1.0"
description = "Automated screening of green corrosion inhibitors (DFT descriptors, adsorption estimate, reports)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Branimir Georgiev", email = "branimir@imbra.io" }]
keywords = ["corrosion", "inhibitor", "DFT", "xtb", "adsorption", "computational-chemistry"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy",
    "rdkit",
    "ase",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
# Quantum engines (xTB is cheap; PySCF is the open DFT path).
# geometric = geomeTRIC backend for PySCF DFT geometry optimisation.
qm = ["tblite", "pyscf", "geometric"]
# Notebook + HTML rendering tooling.
notebook = ["jupyter", "nbformat", "nbconvert", "ipykernel", "markdown"]
# Figure/cube rendering: orbital + ESP isosurfaces (marching cubes + grid sampling).
viz = ["scikit-image", "scipy", "Pillow"]
# Tests / dev (viz deps listed explicitly so test_esp's renderer is importable).
dev = ["pytest", "pytest-cov", "tblite", "ruff", "scikit-image", "scipy", "Pillow"]

[project.scripts]
corrosim = "corrosim.cli:main"

[project.urls]
Homepage = "https://github.com/braboj/corrosim"
Repository = "https://github.com/braboj/corrosim"
Issues = "https://github.com/braboj/corrosim/issues"

[tool.setuptools.packages.find]
include = ["corrosim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
# Notebooks carry exploratory, cell-scoped imports (re-imports per cell, imports
# after setup code) that fight ruff's I001/E402; lint the .py tooling, not the .ipynb.
extend-exclude = ["docs/solid-ai-templates", "notebooks/*.ipynb"]

[tool.ruff.lint]
# Lean starter set: pyflakes + pycodestyle + import sorting.
select = ["E", "F", "I", "W"]
# corrosim keeps a deliberately compact scientific style; accept it:
#   E741 single-letter math names (l, O, N); E702 `a; b` step chains;
#   E731 `log = lambda ...` driver shorthands; E401 grouped stdlib imports.
ignore = ["E741", "E702", "E731", "E401"]

[tool.ruff.lint.per-file-ignores]
# report.py embeds long single-line CSS rules inside HTML string literals.
"corrosim/report.py" = ["E501"]
# render_notebook.py embeds CSS + HTML string literals that exceed the limit.
"tools/render_notebook.py" = ["E501"]
