[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corrosim"
version = "0.1.0"
description = "Automated screening of green corrosion inhibitors (DFT descriptors, adsorption estimate, reports)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Branimir Georgiev", email = "branimir@imbra.io" }]
keywords = ["corrosion", "inhibitor", "DFT", "xtb", "adsorption", "computational-chemistry"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
]
# Lower bounds are the tested-minimum on Python 3.10; left open above so the
# library composes with whatever recent stack the user already has.
dependencies = [
    "numpy>=1.24",
    "rdkit>=2022.9",
    "ase>=3.22",
    "pandas>=1.5",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
# Quantum engines (xTB is cheap; PySCF is the open DFT path).
# geometric = geomeTRIC backend for PySCF DFT geometry optimisation.
qm = ["tblite", "pyscf", "geometric"]
# Figure/cube rendering: orbital + ESP isosurfaces (marching cubes + grid sampling).
viz = ["scikit-image", "scipy", "Pillow"]
# Tests / dev (viz deps listed explicitly so test_esp's renderer is importable).
# tblite is deliberately NOT here: the suite is QM-light (CLAUDE.md 3.1), and the
# one xtb smoke test importorskips it. Use `.[dev,qm]` to exercise the xtb path.
dev = ["pytest", "pytest-cov", "ruff", "mypy", "scikit-image", "scipy", "Pillow"]

[project.scripts]
corrosim = "corrosim.cli:main"

[project.urls]
Homepage = "https://github.com/braboj/corrosim"
Repository = "https://github.com/braboj/corrosim"
Issues = "https://github.com/braboj/corrosim/issues"

[tool.setuptools.packages.find]
include = ["corrosim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["corrosim"]
# Coverage is scoped to the QM-light-testable surface (issue #31 / ADR 0007).
# These modules need a QM engine (PySCF/tblite) or Docker to execute, so they
# cannot run in the venv/CI suite; they are validated by the QM suite
# (`docker compose run --rm qm pytest`) and the tracked pipeline artifacts, and
# are excluded from the coverage denominator rather than left as dead weight.
omit = [
    "corrosim/engines.py",
    "corrosim/fukui.py",
    "corrosim/runs/run_dft.py",
    "corrosim/runs/run_fukui.py",
    "corrosim/runs/run_pka.py",
    "corrosim/runs/make_cubes.py",
]

[tool.coverage.report]
# Gate the scoped (non-omitted) surface at 80% — the python-lib stack target,
# now meaningful because the untestable QM layer is out of the denominator.
fail_under = 80
show_missing = true

[tool.mypy]
# Non-strict introduction (issue #6): catch real type errors without forcing
# annotations everywhere yet. Trigger to tighten — once the public API is fully
# annotated and stubs exist for the scientific deps, flip on disallow_untyped_defs
# + strict_optional per module, then drop ignore_missing_imports en route to --strict.
files = ["corrosim"]
python_version = "3.10"
ignore_missing_imports = true        # rdkit/ase/pyscf/tblite/skimage ship no usable stubs
warn_redundant_casts = true

[[tool.mypy.overrides]]
# Treat the scientific stack as untyped (Any): their stubs/sources use PEP 695
# `type` aliases (3.12+) or, for rdkit, contain a syntax error mypy can't parse at
# our 3.10 target. Skipping the top-level libs stops mypy descending into their
# 3.12-syntax transitive deps (e.g. skimage -> tifffile).
module = [
    "rdkit.*", "numpy", "numpy.*", "pandas", "pandas.*", "scipy.*", "skimage.*",
    "matplotlib.*", "mpl_toolkits.*", "ase.*", "PIL.*", "tblite.*", "pyscf.*",
]
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["docs/solid-ai-templates"]

[tool.ruff.lint]
# pyflakes + pycodestyle + import sorting + Google-style docstrings (D).
select = ["E", "F", "I", "W", "D"]
# corrosim keeps a deliberately compact scientific style; accept it:
#   E741 single-letter math names (l, O, N); E702 `a; b` step chains;
#   E731 `log = lambda ...` driver shorthands; E401 grouped stdlib imports.
#   D205 blank-line-after-summary: corrosim docstrings lead with a long,
#     formula-bearing sentence that spans lines, so the one-line-summary rule
#     doesn't fit; the rest of the Google convention is enforced (deferred like
#     ruff-format — see CLAUDE.md §3).
ignore = ["E741", "E702", "E731", "E401", "D205"]

[tool.ruff.lint.pydocstyle]
# Public-symbol docstrings follow the Google convention (python-lib stack, #31).
# The "docstrings exist" acceptance criterion is additionally pinned by
# tests/test_docstrings.py (issue #6); the D rules add format enforcement.
convention = "google"

[tool.ruff.lint.per-file-ignores]
# report.py embeds long single-line CSS rules inside HTML string literals.
"corrosim/report.py" = ["E501"]
# Tests are not public API — docstrings there are optional (D off).
"tests/**" = ["D"]

[tool.bandit]
# Security SAST (issue #31 / ADR 0007). The runtime security surface is the two
# local QM-binary subprocess launches in engines.py, reviewed and marked
# `# nosec` at the call site (fixed argv, no shell, no untrusted input). Tests
# and vendored docs carry no runtime surface.
exclude_dirs = ["tests", "docs", "cubes", "results", "report"]
